results/SVCOMP/4-shot/log-assert3-2024_03_18_06_23_38.txt
class assert3 {
    //@ ensures true;
    public static void func() {
        int i = Verifier.nondetInt();
        //@ assert i < 1000 || i > 1000;
        if (i >= 1000)
            if (!(i > 1000))
                assert false;
    }
}
/home/max/Documents/JMLGPT/tmp/assert3.java:4: error: cannot find symbol
        int i = Verifier.nondetInt();
                ^
  symbol:   variable Verifier
  location: class assert3
1 error

